Added Editor and its Disabling function in feedbackform

--- a/react-app-starter-master/src/index.css
+++ b/react-app-starter-master/src/index.css
@@ -27,3 +27,11 @@
     z-index: 1;
     margin-top: 20px;
 }
+
+/* .form-buttons {
+    margin-top: 15rem;
+    ma
+} */
+.Home-button {
+    color: #000;
+}
